Fix ol and ul extending beyond width bounds on mobile, remove flex wrap from navigation.

--- a/frontend/src/blog/components/ViewBlog.css
+++ b/frontend/src/blog/components/ViewBlog.css
@@ -21,6 +21,7 @@ blockquote {
 #blog-content > :not(pre) {
   width: 850px;
   max-width: 98%;
+  box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
 }
